Fix unclickable “release notes” link on homepage
The overlapping slides prevented this link from being clicked.

--- a/content/assets/style/components/_footer.css
+++ b/content/assets/style/components/_footer.css
@@ -34,7 +34,7 @@
 .home .footer {
   max-width: none;
 
-  padding-top: 80px;
+  padding-top: 180px;
 
   background: var(--color-footer-bg);
 }
