--- a/content/assets/style/components/_hero.css
+++ b/content/assets/style/components/_hero.css
@@ -60,7 +60,7 @@
 .hero__slides {
   position: relative;
 
-  height: 480px;
+  height: 410px;
 
   max-width: 960px;
   margin: 0 auto;
